--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -144,11 +144,25 @@ span.category-label {
 .entry-row {
     td {
         // the delete icon
-        &.action-bar i {
-            .hide();
-            padding-right: 2px;
-            padding-left: 2px;
-            .pull-right();
+        &.action-bar {
+            width: 10%;
+            i{
+                .hide();
+                padding-right: 2px;
+                padding-left: 2px;
+                .pull-right();
+            }
+        }
+
+        &.category-column {
+            width: 10%;
+        }
+        &.description-column {
+            width: 65%;
+        }
+        &.value-column {
+            width: 15%;
+            text-align: right;
         }
     }
 
