--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -17,7 +17,7 @@
         {% endfor %}
     {% endif %}
 
-    <div class="squared-well">
+    <div class="well">
          
         <h4 class="panel-title">{% trans "Transactions" %}</h4>
 
