--- a/templates/webapp/month_balance_panel.html
+++ b/templates/webapp/month_balance_panel.html
@@ -1,9 +1,7 @@
 {% load i18n %}
 
 <div 
-    class="side-panel affix-top"
-    data-spy="affix"
-    data-offset-top="40"
+    class="side-panel"
 
     ng-controller="BalancePanelCtrl"
     >
