--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -21,6 +21,10 @@
          
         <h4 class="panel-title">{% trans "Transactions" %}</h4>
 
+        <div width="100%" style="text-align: center;">
+            <button class="btn small" id="month-selector" ex-month-selector="month"></button>
+        </div>
+
         <div ng-repeat="day in days | orderBy: 'day':true">
             <table class="table">
                 <thead><tr>
