--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -10,7 +10,9 @@
 @heroUnitBorder:        #ccc;
 @wellBackground:        #fff;
 @baseFontSize:          14px;
-@baseBorderRadius:      0px;
+@baseBorderRadius:      1px;
+@borderRadiusLarge:     1px;
+@borderRadiusSmall:     1px;
 
 body {
     background-image: url(../img/ricepaper2.png);
@@ -18,7 +20,6 @@ body {
 
 .hero-unit {
     border: 1px solid @heroUnitBorder;
-    .border-radius(0);
 }
 
 .navbar-fixed-top .navbar-inner {
@@ -28,7 +29,7 @@ body {
 }
 
 .popover {
-    .border-radius(0px) !important;
+    .border-radius(@baseBorderRadius) !important;
 }
 
 .well {
@@ -38,7 +39,7 @@ body {
 
 .datepicker {
     border: 1px solid #ccc;
-	.border-radius(0px) !important;
+	.border-radius(@baseBorderRadius) !important;
 
 	/*table tr td {
 		&.active,
@@ -64,6 +65,15 @@ body {
 
 @panelBorder: #ccc;
 
+/* 
+  Allow angular.js to be loaded in body, hiding cloaked elements until 
+  templates compile.  The !important is important given that there may be 
+  other selectors that are more specific or come later and might alter display.  
+ */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+
 .affix {
     top: 20px;
     width: 230px;
@@ -71,12 +81,12 @@ body {
 
 input {
     &[type="text"], &[type="password"] {
-        .border-radius(0);
+        .border-radius(@baseBorderRadius);
     }
 
     &[type="submit"] {
         .btn();
-        .border-radius(0);
+        .border-radius(@baseBorderRadius);
     }
 }
 
@@ -85,7 +95,7 @@ input {
         .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
         background-color: #fff;
         border-right: 0;
-        .border-radius(0) !important;
+        .border-radius(@baseBorderRadius) !important;
     }
 
     &.input-block-level {
@@ -171,6 +181,23 @@ span.category-label {
             .show();
         }
     }
+}
+
+.month-selector {
+    margin-bottom: 20px;
+    text-align: center;
+    width: 100%;
+
+    > button {
+        .btn();
+        .btn-small();
+    }
+}
+
+#empty-msg {
+    .alert();
+
+    text-align: center;
 }
  
 .side-panel {
