updating balance when the month chages

--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -22,7 +22,7 @@
         <h4 class="panel-title">{% trans "Transactions" %}</h4>
 
         <div class="month-selector">
-            <button ex-month-selector="month"></button>
+            <button ex-month-selector="filterDate"></button>
         </div>
 
         <div ng-repeat="day in days | orderBy: 'day':true">
