--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -21,6 +21,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.js"></script>
 <script src="{% static "js/moment.min.js" %}"></script>
+<script src="{% static "js/locales/pt-br.js" %}"></script>
 <script src="{% static "js/locales/angular-locale_pt-br.js" %}"></script>
 <script src="{% static "js/app.js" %}"></script>
 <script src="{% static "js/controllers/BalancePanelCtrl.js" %}"></script>
