removing affix from form

--- a/templates/webapp/forms/entry.html
+++ b/templates/webapp/forms/entry.html
@@ -2,7 +2,7 @@
 
 <div ng-controller="TransactionFormCtrl">
 <form
-    class="form affix-top"
+    class="form"
     name="entryform"
     method="post"
 
