--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -11,16 +11,18 @@
 
     <div ng-show="reminders.length" ng-controller="RemindersCtrl">
         {% verbatim %}
-        <div ng-repeat="reminder in reminders" class="well" style="padding-left: 10px; padding-right: 10px; margin-bottom: 5px;">
+        <div ng-repeat="reminder in reminders" class="reminder">
+
             <p>This transaction is due {{reminder.remainingDays()}}. Please confirm, edit or cancel this transaction.</p>
+
             <span ex-category="reminder.category"></span>
             <span ex-currency ex-currency-value="reminder.value"></span>
-            <div class="btn-group">
-                <button class="btn btn-small"><i class="icon-ok-sign"></i> Confirm</button>
-                <button class="btn btn-small"><i class="icon-edit-sign"></i> Edit</button>
-                <button class="btn btn-small"><i class="icon-remove-sign"></i> Cancel</button>
-            </div>
 
+            <div class="buttons">
+                <i class="icon-ok ok"></i>
+                <i class="icon-pencil edit"></i>
+                <i class="icon-remove cancel"></i>
+            </div>
         </div>
         {% endverbatim %}
         
