--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -206,7 +206,7 @@ textarea {
 body {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 20px;
   color: #333333;
   background-color: #f5f5f5;
@@ -550,7 +550,7 @@ p {
 }
 .lead {
   margin-bottom: 20px;
-  font-size: 21px;
+  font-size: 18px;
   font-weight: 200;
   line-height: 30px;
 }
@@ -639,34 +639,34 @@ h3 {
   line-height: 40px;
 }
 h1 {
-  font-size: 38.5px;
+  font-size: 33px;
 }
 h2 {
-  font-size: 31.5px;
+  font-size: 27px;
 }
 h3 {
-  font-size: 24.5px;
+  font-size: 21px;
 }
 h4 {
-  font-size: 17.5px;
+  font-size: 15px;
 }
 h5 {
-  font-size: 14px;
+  font-size: 12px;
 }
 h6 {
-  font-size: 11.9px;
+  font-size: 10.2px;
 }
 h1 small {
-  font-size: 24.5px;
+  font-size: 21px;
 }
 h2 small {
-  font-size: 17.5px;
+  font-size: 15px;
 }
 h3 small {
-  font-size: 14px;
+  font-size: 12px;
 }
 h4 small {
-  font-size: 14px;
+  font-size: 12px;
 }
 .page-header {
   padding-bottom: 9px;
@@ -766,7 +766,7 @@ blockquote {
 }
 blockquote p {
   margin-bottom: 0;
-  font-size: 17.5px;
+  font-size: 15px;
   font-weight: 300;
   line-height: 1.25;
 }
@@ -811,7 +811,7 @@ code,
 pre {
   padding: 0 3px 2px;
   font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
-  font-size: 12px;
+  font-size: 10px;
   color: #333333;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -828,7 +828,7 @@ pre {
   display: block;
   padding: 9.5px;
   margin: 0 0 10px;
-  font-size: 13px;
+  font-size: 11px;
   line-height: 20px;
   word-break: break-all;
   word-wrap: break-word;
@@ -869,7 +869,7 @@ legend {
   width: 100%;
   padding: 0;
   margin-bottom: 20px;
-  font-size: 21px;
+  font-size: 18px;
   line-height: 40px;
   color: #333333;
   border: 0;
@@ -884,7 +884,7 @@ input,
 button,
 select,
 textarea {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: normal;
   line-height: 20px;
 }
@@ -919,7 +919,7 @@ input[type="color"],
   height: 20px;
   padding: 4px 6px;
   margin-bottom: 10px;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 20px;
   color: #555555;
   -webkit-border-radius: 1px;
@@ -1434,7 +1434,7 @@ select:focus:invalid:focus {
 .input-prepend .dropdown-menu,
 .input-append .popover,
 .input-prepend .popover {
-  font-size: 14px;
+  font-size: 12px;
 }
 .input-append input,
 .input-prepend input,
@@ -1465,7 +1465,7 @@ select:focus:invalid:focus {
   height: 20px;
   min-width: 16px;
   padding: 4px 5px;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: normal;
   line-height: 20px;
   text-align: center;
@@ -3611,7 +3611,7 @@ button.close {
   *zoom: 1;
   padding: 4px 12px;
   margin-bottom: 0;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 20px;
   text-align: center;
   vertical-align: middle;
@@ -3695,7 +3695,7 @@ button.close {
 }
 .btn-large {
   padding: 11px 19px;
-  font-size: 17.5px;
+  font-size: 15px;
   -webkit-border-radius: 1px;
   -moz-border-radius: 1px;
   border-radius: 1px;
@@ -3706,7 +3706,7 @@ button.close {
 }
 .btn-small {
   padding: 2px 10px;
-  font-size: 11.9px;
+  font-size: 10.2px;
   -webkit-border-radius: 1px;
   -moz-border-radius: 1px;
   border-radius: 1px;
@@ -3721,7 +3721,7 @@ button.close {
 }
 .btn-mini {
   padding: 0 6px;
-  font-size: 10.5px;
+  font-size: 9px;
   -webkit-border-radius: 1px;
   -moz-border-radius: 1px;
   border-radius: 1px;
@@ -4036,16 +4036,16 @@ input[type="submit"].btn.btn-mini {
 .btn-group > .btn,
 .btn-group > .dropdown-menu,
 .btn-group > .popover {
-  font-size: 14px;
+  font-size: 12px;
 }
 .btn-group > .btn-mini {
-  font-size: 10.5px;
+  font-size: 9px;
 }
 .btn-group > .btn-small {
-  font-size: 11.9px;
+  font-size: 10.2px;
 }
 .btn-group > .btn-large {
-  font-size: 17.5px;
+  font-size: 15px;
 }
 .btn-group > .btn:first-child {
   margin-left: 0;
@@ -5227,7 +5227,7 @@ input[type="submit"].btn.btn-mini {
 .pagination-large ul > li > a,
 .pagination-large ul > li > span {
   padding: 11px 19px;
-  font-size: 17.5px;
+  font-size: 15px;
 }
 .pagination-large ul > li:first-child > a,
 .pagination-large ul > li:first-child > span {
@@ -5272,12 +5272,12 @@ input[type="submit"].btn.btn-mini {
 .pagination-small ul > li > a,
 .pagination-small ul > li > span {
   padding: 2px 10px;
-  font-size: 11.9px;
+  font-size: 10.2px;
 }
 .pagination-mini ul > li > a,
 .pagination-mini ul > li > span {
   padding: 0 6px;
-  font-size: 10.5px;
+  font-size: 9px;
 }
 .pager {
   margin: 20px 0;
@@ -5721,7 +5721,7 @@ a.thumbnail:focus {
 .badge {
   display: inline-block;
   padding: 2px 4px;
-  font-size: 11.844px;
+  font-size: 10.152px;
   font-weight: bold;
   line-height: 14px;
   color: #ffffff;
@@ -7811,7 +7811,7 @@ input[type="submit"] {
   *zoom: 1;
   padding: 4px 12px;
   margin-bottom: 0;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 20px;
   text-align: center;
   vertical-align: middle;
@@ -7951,7 +7951,7 @@ input[type="submit"] .badge {
 span.category-label {
   display: inline-block;
   padding: 2px 4px;
-  font-size: 11.844px;
+  font-size: 10.152px;
   font-weight: bold;
   line-height: 14px;
   color: #ffffff;
@@ -8008,6 +8008,37 @@ span.category-label-inverse[href] {
 /*
  * ENTRY LIST STYLES
  */
+.reminder {
+  padding: 8px 35px 8px 14px;
+  margin-bottom: 20px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  background-color: #fcf8e3;
+  border: 1px solid #fbeed5;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  border-radius: 1px;
+  color: #c09853;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 5px;
+}
+.reminder p {
+  margin-bottom: 10px;
+}
+.reminder .buttons {
+  float: right;
+}
+.reminder .buttons .ok {
+  color: #46a546;
+}
+.reminder .buttons .edit {
+  color: #049cdb;
+}
+.reminder .buttons .cancel {
+  color: #9d261d;
+}
 .entry-row td.action-bar {
   width: 10%;
 }
@@ -8043,7 +8074,7 @@ span.category-label-inverse[href] {
   *zoom: 1;
   padding: 4px 12px;
   margin-bottom: 0;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 20px;
   text-align: center;
   vertical-align: middle;
@@ -8072,7 +8103,7 @@ span.category-label-inverse[href] {
   -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
   box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
   padding: 2px 10px;
-  font-size: 11.9px;
+  font-size: 10.2px;
   -webkit-border-radius: 1px;
   -moz-border-radius: 1px;
   border-radius: 1px;
@@ -8188,7 +8219,7 @@ form[name="entryform"] input[type="submit"] {
   *zoom: 1;
   padding: 4px 12px;
   margin-bottom: 0;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 20px;
   text-align: center;
   vertical-align: middle;
