--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -19,9 +19,8 @@
             <span ex-currency ex-currency-value="reminder.value"></span>
 
             <div class="buttons">
-                <i class="icon-ok ok"></i>
-                <i class="icon-pencil edit"></i>
-                <i class="icon-remove cancel"></i>
+                <a ng-click="createTransaction(reminder)"><i class="icon-ok ok"></i></a>
+                <a><i class="icon-remove cancel"></i></a>
             </div>
         </div>
         {% endverbatim %}
