setting value field default as zero

--- a/templates/webapp/forms/entry.html
+++ b/templates/webapp/forms/entry.html
@@ -46,9 +46,9 @@
                         id="id_value"
                         name="value"
                         type="text"
+                        value="0.00"
 
                         ng-model="transaction.value"
-                        ng-required="!isRepeat"
                         ex-valuefield
 
                         autocomplete="off"
