skipping reminder period

--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -20,7 +20,7 @@
 
             <div class="buttons">
                 <a ng-click="createTransaction(reminder)"><i class="icon-ok ok"></i></a>
-                <a><i class="icon-remove cancel"></i></a>
+                <a ng-click="skip(reminder)"><i class="icon-remove cancel"></i></a>
             </div>
         </div>
         {% endverbatim %}
