--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -23,6 +23,7 @@
 <script src="{% static "js/moment.min.js" %}"></script>
 <script src="{% static "js/locales/pt-br.js" %}"></script>
 <script src="{% static "js/locales/angular-locale_pt-br.js" %}"></script>
+<script src="{% static "js/angular-strap.min.js" %}"></script>
 <script src="{% static "js/app.js" %}"></script>
 <script src="{% static "js/controllers/BalancePanelCtrl.js" %}"></script>
 <script src="{% static "js/controllers/RemindersCtrl.js" %}"></script>
