--- a/templates/webapp/month_balance_panel.html
+++ b/templates/webapp/month_balance_panel.html
@@ -18,7 +18,7 @@
 
         (<span
             ex-deviation
-            ex-deviation-value="{{balance_data.balance.deviation}}"
+            ex-deviation-value="((balance_data.balance.deviation))"
             ></span>)
     </p>
     {% endverbatim %}
