--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -13,14 +13,21 @@
         {% verbatim %}
         <div ng-repeat="reminder in reminders" class="reminder">
 
-            <p>This transaction is due {{reminder.remainingDays()}}. Please confirm, edit or cancel this transaction.</p>
+            <p>This transaction is due ((reminder.remainingDays() )). Please confirm, edit or cancel this transaction.</p>
 
             <span ex-category="reminder.category"></span>
             <span ex-currency ex-currency-value="reminder.value"></span>
 
             <div class="buttons">
-                <a ng-click="createTransaction(reminder)"><i class="icon-ok ok"></i></a>
-                <a ng-click="skip(reminder)"><i class="icon-remove cancel"></i></a>
+                <a
+                    ng-click="createTransaction(reminder)"
+
+                    bs-tooltip="createTransactionText"
+                    ><i class="icon-ok ok"></i></a>
+
+                <a
+                    ng-click="skip(reminder)"
+                    ><i class="icon-remove cancel"></i></a>
             </div>
         </div>
         {% endverbatim %}
