--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -4,39 +4,12 @@
 {% load i18n %}
 
 <div class="span3">
-    {% include "webapp/forms/entry.html" %}
+    {% include "webapp/transaction-form.html" %}
 </div>
 
 <div class="span6">
 
-    <div ng-show="reminders.length" ng-controller="RemindersCtrl">
-        <div ng-repeat="reminder in reminders" class="reminder">
-
-            <p>{% trans "This transaction is due ((reminder.remainingDays() )). Please confirm, edit or skip this transaction." %}</p>
-
-            <span ex-category="reminder.category"></span>
-            <span ex-currency ex-currency-value="reminder.value"></span>
-
-            <div class="buttons">
-                <a
-                    ng-click="createTransaction(reminder)"
-
-                    title="{% trans 'Confirm' %}"
-                    bs-tooltip
-
-                    ><i class="icon-ok ok"></i></a>
-
-                <a
-                    ng-click="skip(reminder)"
-
-                    title="{% trans 'Skip' %}"
-                    bs-tooltip
-
-                    ><i class="icon-remove cancel"></i></a>
-            </div>
-        </div>
-        
-    </div>
+    {% include "webapp/reminder-list.html" %}
 
     <div class="well" ng-controller="TransactionListCtrl">
          
