increased reminder icons

--- a/templates/webapp/reminder-list.html
+++ b/templates/webapp/reminder-list.html
@@ -15,7 +15,7 @@
                 title="{% trans 'Confirm' %}"
                 bs-tooltip
 
-                ><i class="icon-ok ok"></i></a>
+                ><i class="icon-ok ok icon-large"></i></a>
 
             <a
                 ng-click="skip(reminder)"
@@ -23,7 +23,7 @@
                 title="{% trans 'Skip' %}"
                 bs-tooltip
 
-                ><i class="icon-remove cancel"></i></a>
+                ><i class="icon-remove cancel icon-large"></i></a>
         </div>
     </div>
 </div>
