--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -167,6 +167,10 @@ span.category-label {
     .buttons {
         .pull-right();
 
+        a {
+            cursor: pointer;
+        }
+
         .ok {
             color: @green;
         }
@@ -175,7 +179,7 @@ span.category-label {
             color: @blue;
         }
 
-        .cancel {
+        .skip {
             color: @red;
         }
     }
