--- a/templates/webapp/reminder-list.html
+++ b/templates/webapp/reminder-list.html
@@ -20,10 +20,10 @@
             <a
                 ng-click="skip(reminder)"
 
-                title="{% trans 'Skip' %}"
+                title="{% trans 'Skip to next due date' %}"
                 bs-tooltip
 
-                ><i class="icon-remove cancel icon-large"></i></a>
+                ><i class="icon-share-alt skip icon-large"></i></a>
         </div>
     </div>
 </div>
