--- a/templates/webapp/reminder-list.html
+++ b/templates/webapp/reminder-list.html
@@ -20,8 +20,7 @@
             <a
                 ng-click="skip(reminder)"
 
-                title="{% trans 'Skip to next due date' %}"
-                bs-tooltip
+                bs-tooltip="interpolate(gettext('Skip to %s'), [(reminder.due_date | date:'mediumDate')])"
 
                 ><i class="icon-share-alt skip icon-large"></i></a>
         </div>
