--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -2,9 +2,6 @@
 @import "bootstrap/responsive.less";
 @import "datepicker.less";
 
-/*
- * OVERRIDES
- */
 @bodyBackground:        #f5f5f5;
 @heroUnitBackground:    #fff;
 @heroUnitBorder:        #ccc;
@@ -14,6 +11,11 @@
 @borderRadiusLarge:     1px;
 @borderRadiusSmall:     1px;
 
+@panelBorder: #ccc;
+
+/*
+ * OVERRIDES
+ */
 body {
     background-image: url(../img/ricepaper2.png);
 }
@@ -36,7 +38,6 @@ body {
     border: 1px solid @panelBorder;
 }
 
-
 .datepicker {
     border: 1px solid #ccc;
 	.border-radius(@baseBorderRadius) !important;
@@ -57,13 +58,12 @@ body {
  * /OVERRIDES
  */
 
-
+@import "presentation.less";
+@import "transaction-form.less";
 
 /*
  * GLOBAL STYLES
  */
-
-@panelBorder: #ccc;
 
 /* 
   Allow angular.js to be loaded in body, hiding cloaked elements until 
@@ -79,17 +79,6 @@ body {
     width: 230px;
 }
 
-input {
-    &[type="text"], &[type="password"] {
-        .border-radius(@baseBorderRadius);
-    }
-
-    &[type="submit"] {
-        .btn();
-        .border-radius(@baseBorderRadius);
-    }
-}
-
 .input-prepend {
     .add-on {
         .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
@@ -101,7 +90,6 @@ input {
     &.input-block-level {
         display: table;
         width: 100%;
-        margin-bottom: 17px;
 
         .add-on {
             display: table-cell;
@@ -238,69 +226,6 @@ span.category-label {
     .well();
 }
 
-form[name="entryform"] {
-    .well();
-
-    input[type="submit"] {
-        .btn();
-        .btn-block();
-    }
-}
 /*
  * /ENTRY LIST STYLES
- */
-
-
-
-/*
- * PRESENTATION PAGE
- */
-
-[id="signup-area"] {
-    .well();
-
-    form {
-        width: 80%;
-        margin: auto;
-    }
-}
-
-section.main {
-    background-image: url(../img/textured_paper.png);
-}
-section.highlight1 {
-    background-image: url(../img/paper_2.png);
-}
-section.highlight2 {
-    background-image: url(../img/ricepaper2.png);
-}
-
-.hero-unit.presentation-block {
-    #translucent > .border(@alpha: 0);
-    #translucent > .background(@alpha: 0) !important;
-}
-
-form {
-    &[id="register-form"], &[id="signin-form"] { 
-        input[type="submit"] {
-            .btn-block();
-        }
-    }
-
-    &[id="register-form"] {
-        input[type="submit"] {
-            .btn-danger();
-        }
-    }
-
-    &[id="login-inline"] {
-        input {
-            &[type="text"], &[type="password"] {
-                margin-right: 10px;
-            }
-        }
-    }
-}
-/*
- * /PRESENTATION PAGE
  */
