--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -11,6 +11,14 @@
 {% block body %}
 
 <div class="container" ng-app="webapp" id="ng-app">
+    <div class="row">
+        <div class="span12">
+        <ul class="nav nav-pills">
+            <li ng-class="{active: $state.includes('transactions')}"><a href="#/transactions">{% trans "Transactions" %}</a></li>
+            <li ng-class="{active: $state.includes('settings')}"><a href="#/settings">{% trans "Settings" %}</a></li>
+        </ul>
+        </div>
+    </div>
     <div class="row" ui-view>
     </div>
 </div>
