finishing settings navigation

--- a/templates/webapp/settings.html
+++ b/templates/webapp/settings.html
@@ -1,3 +1,11 @@
-ok
+{% load i18n %}
 
-<div ui-view></div>
+<div class="span3">
+    <ul class="nav nav-list" id="settings-menu">
+        <li class="nav-header">{% trans "Menu" %}</li>
+        <li ng-class="{active: $state.includes('settings.categories')}"><a href="#/settings/categories">{% trans "Categories" %}</a></li>
+        <li ng-class="{active: $state.includes('settings.reminders')}"><a href="#/settings/reminders">{% trans "Reminders" %}</a></li>
+    </ul>
+</div>
+
+<div class="span9" ui-view></div>
