--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8202,6 +8202,24 @@ form.transaction-form fieldset {
 form.transaction-form hr {
   margin: 10px 0;
 }
+#settings-menu {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #ffffff;
+  border: 1px solid #ededed;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  border-radius: 1px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  border: 1px solid #cccccc;
+}
+#settings-menu blockquote {
+  border-color: #ddd;
+  border-color: rgba(0, 0, 0, 0.15);
+}
 /*
  * GLOBAL STYLES
  */
