--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -39,6 +39,7 @@
 <script src="{% static "js/controllers/TransactionActionBarCtrl.js" %}"></script>
 <script src="{% static "js/controllers/TransactionFormCtrl.js" %}"></script>
 <script src="{% static "js/controllers/TransactionListCtrl.js" %}"></script>
+<script src="{% static "js/controllers/CategoryListCtrl.js" %}"></script>
 <script src="{% static "js/services.js" %}"></script>
 <script src="{% static "js/directives.js" %}"></script>
 {% endblock bodyend %}
