--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -40,6 +40,7 @@
 <script src="{% static "js/controllers/TransactionFormCtrl.js" %}"></script>
 <script src="{% static "js/controllers/TransactionListCtrl.js" %}"></script>
 <script src="{% static "js/controllers/CategoryListCtrl.js" %}"></script>
+<script src="{% static "js/controllers/ReminderListCtrl.js" %}"></script>
 <script src="{% static "js/services.js" %}"></script>
 <script src="{% static "js/directives.js" %}"></script>
 {% endblock bodyend %}
