--- a/templates/webapp/settings/category-list.html
+++ b/templates/webapp/settings/category-list.html
@@ -2,7 +2,7 @@
 
 <h4 class="panel-title">{% trans "Categories" %}</h4>
 
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>{% trans "Color" %}</th>
