--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -17,7 +17,7 @@
         </div>
 
         <div ng-repeat="day in days | orderBy: 'day':true">
-            <table class="table">
+            <table class="table table-striped">
                 <thead><tr>
                     <td colspan="3" ng-bind="day.day | date:'fullDate'"></td>
                 </tr></thead>
